--- a/ninchatsdk/src/main/res/layout/review_rating_bot_view.xml
+++ b/ninchatsdk/src/main/res/layout/review_rating_bot_view.xml
@@ -10,36 +10,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="visible"
         android:layout_marginStart="@dimen/ninchat_questionnaire_items_margin_left"
-        android:layout_marginEnd="@dimen/ninchat_questionnaire_items_margin_right">
+        android:layout_marginEnd="@dimen/ninchat_questionnaire_items_margin_right"
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/ninchat_chat_message_bot_avatar"
-                android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
-                android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_avatar_margin"
-                android:src="@drawable/ninchat_chat_avatar_left"
-                android:adjustViewBounds="true"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:scaleType="fitCenter"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/ninchat_chat_message_bot_text"
-                android:layout_marginEnd="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="@dimen/ninchat_chat_activity_message_title_height"
-                tools:text="LightbotAgent"
-                android:gravity="center|left"
-                android:textColor="@color/ninchat_color_chat_name" />
+                <ImageView
+                    android:id="@+id/ninchat_chat_message_bot_avatar"
+                    style="@style/NinchatTheme.Questionnaire.BotView"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/ninchat_chat_message_bot_text"
+                    style="@style/NinchatTheme.Questionnaire.BotView.Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    tools:text="Light bot"
+                    tools:visibility="visible" />
+            </RelativeLayout>
 
         </LinearLayout>
 
@@ -55,6 +55,6 @@
 
     <include
         android:id="@+id/ninchat_bot_ratings_icon_items_root_view"
-        layout="@layout/review_rating_icon_items"/>
+        layout="@layout/review_rating_icon_items" />
 
 </LinearLayout>
