--- a/ninchatsdk/src/main/res/values/config.xml
+++ b/ninchatsdk/src/main/res/values/config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="ninchat_queue_activity_progress_duration">3</integer>
-    <bool name="ninchat_allow_user_initiated_video_calls">true</bool>
+    <bool name="ninchat_allow_user_initiated_video_calls">false</bool>
     <bool name="ninchat_chat_background_not_tiled">false</bool>
     <string name="ninchat_questionnaire_checkbox_label_text_style">normal</string>
     <string name="ninchat_chat_info_text_align">center</string>
